@@ -18,4 +18,4 @@ dnl AC_ARG_WITH(classpath,[  --with-classpath          Path to Java classes], cl
 
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
-AC_OUTPUT(Makefile kawa/Makefile kawa/lang/Makefile kawa/standard/Makefile)
+AC_OUTPUT(Makefile codegen/Makefile kawa/Makefile kawa/lang/Makefile kawa/standard/Makefile)
